--- a/www/styles.css
+++ b/www/styles.css
@@ -1,6 +1,6 @@
 
-@import url("//fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:400,700");
-@import url("//fonts.googleapis.com/css?family=Lobster");
+@import url("//fonts.googleapis.com/css?family=BenchNine|Ubuntu+Condensed:400,700");
+@import url("//fonts.googleapis.com/css?family=Lobster+Two");
 
 div.outer {
   position: fixed;
@@ -20,12 +20,12 @@ html {
 body {
   width:100%;
   height:100%;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'BenchNine', sans-serif;
   font-size: 18px;
 }
 
 h1 {
-  font: bold 20px 'Roboto Condensed', sans-serif;
+  font: bold 20px 'BenchNine', sans-serif;
 }
 
 
@@ -582,12 +582,12 @@ hr {
 
 /* Mudar a font do leaflet! */
 .leaflet-container {
-  font: 14px "Roboto Condensed", sans-serif;
+  font: 14px "BenchNine", sans-serif;
 }
 
 .info {
   padding: 6px 8px;
-  font: 14px/16px "Roboto Condensed", sans-serif;
+  font: 14px/16px "BenchNine", sans-serif;
 }
 
 .leaflet-popup-content-wrapper{
